@YELP_HELP_RULES@
HELP_ID = gnome-taquin

HELP_MEDIA = \
	figures/start-screen.png    \
	figures/fifteen.png         \
	figures/sixteen.png

HELP_FILES = \
	15-Puzzle.page      \
	16-Puzzle.page      \
	beginning.page      \
	index.page          \
	legal.xml           \
	license.page        \
	shortcuts.page      \
	start-screen.page

-include $(top_srcdir)/git.mk
