@YELP_HELP_RULES@
HELP_ID = gnome-taquin

HELP_MEDIA = \
	figures/logo.png            \
	figures/logo32.png          \
	figures/start-screen.png    \
	figures/fifteen.png         \
	figures/sixteen.png

HELP_FILES = \
	15-Puzzle.page      \
	16-Puzzle.page      \
	beginning.page      \
	index.page          \
	legal.xml           \
	license.page        \
	shortcuts.page      \
	start-screen.page

HELP_LINGUAS = cs el

-include $(top_srcdir)/git.mk
