help_pages = [
    '15-Puzzle.page',
    '16-Puzzle.page',
    'beginning.page',
    'index.page',
    'legal.xml',
    'license.page',
    'shortcuts.page',
    'start-screen.page',
]
help_media = [
    'figures/fifteen.png',
    'figures/logo.png',
    'figures/logo32.png',
    'figures/sixteen.png',
    'figures/start-screen.png',
]

gnome.yelp(meson.project_name(),
    sources: help_pages,
    media: help_media,
    symlink_media: true
)