help_pages = [
    '15-Puzzle.page',
    '16-Puzzle.page',
    'beginning.page',
    'index.page',
    'legal.xml',
    'license.page',
    'start-screen.page',
]
help_media = [
    'figures/logo.png',
    'figures/logo32.png',
]

gnome.yelp(meson.project_name(),
    sources: help_pages,
    media: help_media,
    symlink_media: true
)
