numbersdir=$(datadir)/gnome-taquin/themes/numbers
numbers_DATA = \
	numbers/3-numbers.png \
	numbers/4-numbers.png \
	numbers/5-numbers.png

catsdir=$(datadir)/gnome-taquin/themes/cats
cats_DATA = \
	cats/1-Cat_face_day.jpg \
	cats/1-Jasmina.jpg \
	cats/1-maine.jpg \
	cats/1-march.jpg \
	cats/1-Tortoiseshell.jpg

EXTRA_DIST = $(numbers_DATA) $(cats_DATA)

-include $(top_srcdir)/git.mk
