install_data(
    [
        'cats/1-Cat_face_day.jpg',
        'cats/1-Jasmina.jpg',
        'cats/1-maine.jpg',
        'cats/1-march.jpg',
        'cats/1-Tortoiseshell.jpg'
    ],
    install_dir: join_paths(pkgdatadir, 'themes', 'cats')
)

install_data(
    [
        'numbers/03-numbers.svg',
        'numbers/04-numbers.svg',
        'numbers/05-numbers.svg',
        'numbers/3-numbers.png',
        'numbers/4-numbers.png',
        'numbers/5-numbers.png'
    ],
    install_dir: join_paths(pkgdatadir, 'themes', 'numbers')
)